--- a/app/CallFuctions/test.ipynb
+++ b/app/CallFuctions/test.ipynb
@@ -2,12 +2,329 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from config import SafeBrowsing_API_KEY\n",
-    "api_key = SafeBrowsing_API_KEY"
+    "import os\n",
+    "import google.generativeai as genai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model(name='models/chat-bison-001',\n",
+      "      base_model_id='',\n",
+      "      version='001',\n",
+      "      display_name='PaLM 2 Chat (Legacy)',\n",
+      "      description='A legacy text-only model optimized for chat conversations',\n",
+      "      input_token_limit=4096,\n",
+      "      output_token_limit=1024,\n",
+      "      supported_generation_methods=['generateMessage', 'countMessageTokens'],\n",
+      "      temperature=0.25,\n",
+      "      top_p=0.95,\n",
+      "      top_k=40)\n",
+      "Model(name='models/text-bison-001',\n",
+      "      base_model_id='',\n",
+      "      version='001',\n",
+      "      display_name='PaLM 2 (Legacy)',\n",
+      "      description='A legacy model that understands text and generates text as an output',\n",
+      "      input_token_limit=8196,\n",
+      "      output_token_limit=1024,\n",
+      "      supported_generation_methods=['generateText', 'countTextTokens', 'createTunedTextModel'],\n",
+      "      temperature=0.7,\n",
+      "      top_p=0.95,\n",
+      "      top_k=40)\n",
+      "Model(name='models/embedding-gecko-001',\n",
+      "      base_model_id='',\n",
+      "      version='001',\n",
+      "      display_name='Embedding Gecko',\n",
+      "      description='Obtain a distributed representation of a text.',\n",
+      "      input_token_limit=1024,\n",
+      "      output_token_limit=1,\n",
+      "      supported_generation_methods=['embedText', 'countTextTokens'],\n",
+      "      temperature=None,\n",
+      "      top_p=None,\n",
+      "      top_k=None)\n",
+      "Model(name='models/gemini-pro',\n",
+      "      base_model_id='',\n",
+      "      version='001',\n",
+      "      display_name='Gemini Pro',\n",
+      "      description='The best model for scaling across a wide range of tasks',\n",
+      "      input_token_limit=30720,\n",
+      "      output_token_limit=2048,\n",
+      "      supported_generation_methods=['generateContent', 'countTokens'],\n",
+      "      temperature=0.9,\n",
+      "      top_p=1.0,\n",
+      "      top_k=1)\n",
+      "Model(name='models/gemini-pro-vision',\n",
+      "      base_model_id='',\n",
+      "      version='001',\n",
+      "      display_name='Gemini Pro Vision',\n",
+      "      description='The best image understanding model to handle a broad range of applications',\n",
+      "      input_token_limit=12288,\n",
+      "      output_token_limit=4096,\n",
+      "      supported_generation_methods=['generateContent', 'countTokens'],\n",
+      "      temperature=0.4,\n",
+      "      top_p=1.0,\n",
+      "      top_k=32)\n",
+      "Model(name='models/embedding-001',\n",
+      "      base_model_id='',\n",
+      "      version='001',\n",
+      "      display_name='Embedding 001',\n",
+      "      description='Obtain a distributed representation of a text.',\n",
+      "      input_token_limit=2048,\n",
+      "      output_token_limit=1,\n",
+      "      supported_generation_methods=['embedContent', 'countTextTokens'],\n",
+      "      temperature=None,\n",
+      "      top_p=None,\n",
+      "      top_k=None)\n",
+      "Model(name='models/aqa',\n",
+      "      base_model_id='',\n",
+      "      version='001',\n",
+      "      display_name='Model that performs Attributed Question Answering.',\n",
+      "      description=('Model trained to return answers to questions that are grounded in provided '\n",
+      "                   'sources, along with estimating answerable probability.'),\n",
+      "      input_token_limit=7168,\n",
+      "      output_token_limit=1024,\n",
+      "      supported_generation_methods=['generateAnswer'],\n",
+      "      temperature=0.2,\n",
+      "      top_p=1.0,\n",
+      "      top_k=40)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in genai.list_models():\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "genai.configure(api_key=os.environ.get(\"GOOGLE_API_KEY\"))\n",
+    "model = genai.GenerativeModel(\"gemini-pro\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "safety_settings = [\n",
+    "    {\n",
+    "        \"category\": \"HARM_CATEGORY_DANGEROUS\",\n",
+    "        \"threshold\": \"BLOCK_NONE\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"category\": \"HARM_CATEGORY_HARASSMENT\",\n",
+    "        \"threshold\": \"BLOCK_NONE\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"category\": \"HARM_CATEGORY_HATE_SPEECH\",\n",
+    "        \"threshold\": \"BLOCK_NONE\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"category\": \"HARM_CATEGORY_SEXUALLY_EXPLICIT\",\n",
+    "        \"threshold\": \"BLOCK_NONE\",\n",
+    "    },\n",
+    "    {\n",
+    "        \"category\": \"HARM_CATEGORY_DANGEROUS_CONTENT\",\n",
+    "        \"threshold\": \"BLOCK_NONE\",\n",
+    "    },\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See how the content is blocked"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = model.generate_content('Tell me in yes or no only. Is any peice of content made of these words in backticks are safe for a kid to consume ``` voilence rape enjoy sex ```', safety_settings=safety_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "block_reason: OTHER\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.prompt_feedback)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Give other other edge cases."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = model.generate_content(f'Answer in Yes or NO. If an article is made of these words inside tiple backticks, then tell me if it safe to consume. ```India Reclaim Second Spot on WTC Points Table After Beating England in Vizag```', safety_settings=safety_settings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NO\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "m:\\Third Year\\Sixth Semester\\Projects\\ReckonHackathon\\Obscene_ContentBlocker\\venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n",
+      "Some weights of the model checkpoint at cardiffnlp/twitter-roberta-base-sentiment-latest were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForSequenceClassification\n",
+    "model_nlp = AutoModelForSequenceClassification.from_pretrained(\"cardiffnlp/twitter-roberta-base-sentiment-latest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import AutoTokenizer\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"cardiffnlp/twitter-roberta-base-sentiment-latest\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline\n",
+    "sentiment_task = pipeline(\"sentiment-analysis\", model=model_nlp, tokenizer=tokenizer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = '''Israel’s war on Gaza live: Hamas says Rafah assault would end captive talks\n",
+    "An aerial view of the makeshift tents as the Palestinian families seek refuge at the El-Mavasi district as they struggle to find clean water, food and medicine as the Israeli attacks continue in Rafah\n",
+    "By Lyndal Rowlands, John Power and Umut Uras\n",
+    "Published On 11 Feb 2024\n",
+    "11 Feb 2024\n",
+    "Click here to share on social media\n",
+    "Any Israeli ground offensive on Rafah will “blow up” the captive exchange negotiations, Al-Aqsa television channel quoted a senior Hamas leader as saying on Sunday.\n",
+    "The United Nations, the European Union, the United States and Arab nations are warning Israel not to go ahead with the planned offensive, saying it would cause a humanitarian catastrophe.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res=sentiment_task(text)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "negative 0.7162273526191711\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res['label'], res['score'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# testing model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of the model checkpoint at cardiffnlp/twitter-roberta-base-sentiment-latest were not used when initializing RobertaForSequenceClassification: ['roberta.pooler.dense.bias', 'roberta.pooler.dense.weight']\n",
+      "- This IS expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
+      "- This IS NOT expected if you are initializing RobertaForSequenceClassification from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForSequenceClassification\n",
+    "from transformers import AutoTokenizer\n",
+    "from transformers import pipeline\n",
+    "model_nlp = AutoModelForSequenceClassification.from_pretrained(\"cardiffnlp/twitter-roberta-base-sentiment-latest\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"cardiffnlp/twitter-roberta-base-sentiment-latest\")\n",
+    "sentiment_task = pipeline(\"sentiment-analysis\", model=model_nlp, tokenizer=tokenizer)"
    ]
   },
   {
@@ -15,47 +332,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import requests\n",
-    "import json\n",
-    "\n",
-    "def check_url_safe_browsing(api_key, url):\n",
-    "    safe_browsing_url = f'https://safebrowsing.googleapis.com/v4/threatMatches:find?key={api_key}'\n",
-    "\n",
-    "    payload = {\n",
-    "        'client': {\n",
-    "            'clientId': 'your-application-name',\n",
-    "            'clientVersion': '1.0.0',\n",
-    "        },\n",
-    "        'threatInfo': {\n",
-    "            'threatTypes': ['MALWARE', 'SOCIAL_ENGINEERING', 'UNWANTED_SOFTWARE'],\n",
-    "            'platformTypes': ['ANY_PLATFORM'],\n",
-    "            'threatEntryTypes': ['URL'],\n",
-    "            'threatEntries': [{'url': url}],\n",
-    "        },\n",
-    "    }\n",
-    "\n",
-    "    headers = {'Content-Type': 'application/json'}\n",
-    "\n",
-    "    response = requests.post(safe_browsing_url, data=json.dumps(payload), headers=headers)\n",
-    "\n",
-    "    if response.status_code == 200:\n",
-    "        threat_matches = response.json().get('matches', [])\n",
-    "        if threat_matches:\n",
-    "            print(f\"The URL '{url}' is considered unsafe.\")\n",
-    "            for match in threat_matches:\n",
-    "                print(f\"Type: {match['threatType']}, Platform: {match['platformType']}\")\n",
-    "        else:\n",
-    "            print(f\"The URL '{url}' is safe.\")\n",
-    "    else:\n",
-    "        print(f\"Error checking URL: {response.status_code} - {response.text}\")\n",
-    "\n",
-    "# Example usage\n",
-    "api_key = 'YOUR_API_KEY'\n",
-    "url_to_check = 'https://example.com'\n",
-    "\n",
-    "check_url_safe_browsing(api_key, url_to_check)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -65,7 +342,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.11.5"
   }
  },
